--- a/Block 4/Topic 1/Task 2.2/index.html
+++ b/Block 4/Topic 1/Task 2.2/index.html
@@ -131,10 +131,10 @@
 					<h3 class="price-plan__title">Free</h3>
 					<p class="price-plan__price"><span class="span--price">0</span> руб./мес.</p>
 					<ul class="price-plan__details">
-						<li class="price-plan_details__item">2 Gb в хранилище</li>
-						<li class="price-plan_details__item">1 пользователь</li>
-						<li class="price-plan_details__item">Поддержка по email</li>
-						<li class="price-plan_details__item">Доступ к работам сообщества</li>
+						<li class="price-plan__detail-item">2 Gb в хранилище</li>
+						<li class="price-plan__detail-item">1 пользователь</li>
+						<li class="price-plan__detail-item">Поддержка по email</li>
+						<li class="price-plan__detail-item">Доступ к работам сообщества</li>
 					</ul>
 					<button class="price-plan__button price-plan__button--free button">Начать бесплатно</button>
 				</li>
@@ -142,10 +142,10 @@
 					<h3 class="price-plan__title">Basic</h3>
 					<p class="price-plan__price"><span class="span--price">100</span> руб./мес.</p>
 					<ul class="price-plan__details">
-						<li class="price-plan_details__item">10 Gb в хранилище</li>
-						<li class="price-plan_details__item">3 пользователя</li>
-						<li class="price-plan_details__item">Поддержка по email и телефону</li>
-						<li class="price-plan_details__item">Доступ к работам сообщества</li>
+						<li class="price-plan__detail-item">10 Gb в хранилище</li>
+						<li class="price-plan__detail-item">3 пользователя</li>
+						<li class="price-plan__detail-item">Поддержка по email и телефону</li>
+						<li class="price-plan__detail-item">Доступ к работам сообщества</li>
 					</ul>
 					<button class="price-plan__button button">Оформить подписку</button>
 				</li>
@@ -153,10 +153,10 @@
 					<h3 class="price-plan__title">Pro</h3>
 					<p class="price-plan__price"><span class="span--price">500</span> руб./мес.</p>
 					<ul class="price-plan__details">
-						<li class="price-plan_details__item">50 Gb в хранилище</li>
-						<li class="price-plan_details__item">Неограниченное число пользователей</li>
-						<li class="price-plan_details__item">Приоритетная поддержка</li>
-						<li class="price-plan_details__item">Доступ к работам сообщества</li>
+						<li class="price-plan__detail-item">50 Gb в хранилище</li>
+						<li class="price-plan__detail-item">Неограниченное число пользователей</li>
+						<li class="price-plan__detail-item">Приоритетная поддержка</li>
+						<li class="price-plan__detail-item">Доступ к работам сообщества</li>
 					</ul>
 					<button class="price-plan__button button">Связаться с нами</button>
 				</li>
